fix: find my combos buttons on mobile

--- a/src/assets/globals.scss
+++ b/src/assets/globals.scss
@@ -65,7 +65,7 @@ a {
 }
 
 .button {
-  @apply m-4 inline-block py-2 px-3 bg-transparent text-link border-2 border-primary rounded-sm no-underline dark:text-primary;
+  @apply m-4 inline-block py-3 px-4 bg-transparent text-link border-2 border-primary rounded-sm no-underline dark:text-primary;
 }
 
 input, textarea, select, option, .input, .inputControl {
